--- a/XamarinTimeTracker/View/StartPage.xaml
+++ b/XamarinTimeTracker/View/StartPage.xaml
@@ -3,5 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:converters="clr-namespace:XamarinTimeTracker;assembly=XamarinTimeTracker"
              x:Class="XamarinTimeTracker.StartPage">
-
+   
+    <ContentPage.Resources>
+        <ResourceDictionary>
+          <converters:BoolToColorConverter0 
+          x:Key="activeProjectTextColor" 
+          TrueColor="Green" 
+          FalseColor="Black"/>
+          <converters:DurationValueConverter0 x:Key="duration" />
+        </ResourceDictionary>
+    </ContentPage.Resources>
+  
 </ContentPage>
