Add 'Add New Project' button to StartPage

--- a/XamarinTimeTracker/View/StartPage.xaml
+++ b/XamarinTimeTracker/View/StartPage.xaml
@@ -37,6 +37,12 @@
                     </DataTemplate>
                 </ListView.ItemTemplate>
             </ListView>
+
+            <Button
+                StyleId="AddProject"
+                Command="{Binding AddNewProjectCommand}"
+                HorizontalOptions="FillAndExpand" />
+
         </StackLayout>
     </ContentPage.Content>
 
